--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  width: 100%;
+  height: 50px;
+  background-color:black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar-header{
   color: white;
+  text-align: center;
+  padding-top: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+body{
+  background-color:gray
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-inner{
+  display: flex;
+}
+.navbar-inner-text{
+  color: white;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+.details{
+  display: flex;
+}
+.imageuser{
+  margin-left: 25%;
+}
+.homepage{
+  margin-top: 20px;
+}
+.container{
+  margin-left:40% !important;
+  margin-top: 30px;
+}
+.userDetailImage{
+  margin-bottom: 30px;
 }
